--- a/sweater/src/main/resources/templates/main.mustache
+++ b/sweater/src/main/resources/templates/main.mustache
@@ -9,6 +9,11 @@
     </form>
 </div>
 <div>Message list:</div>
+<form method="post" action="filter">
+    <input type="text" name="text"/>
+    <button type="submit">Find</button>
+</form>
+<!--messages correspond with first parameter from model.put(...) specified as a string -->
 {{#messages}}
     <div>
         <b>{{id}}</b>
