--- a/SpringMVCApp1/src/main/webapp/WEB-INF/views/people/show.html
+++ b/SpringMVCApp1/src/main/webapp/WEB-INF/views/people/show.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>All persons</title>
 </head>
 <body>
 <div th:each="person : ${personList}">
-    <a th:text="${person.getName}">Name</a>
+    <a th:href="@{/{id}(id=${person.getId()})}" th:text="${person.getName()}">user</a>
 </div>
+<br/>
+<hr/>
+
+<a th:href="@{/new}">Create new person</a>
 </body>
 </html>
